[project]
name = "python-fastapi-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Shailendra Jain",email = "shailendrajain28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "python_fastapi_workflow", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
